--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,12 +1,12 @@
-/* Colors */
-$color-background-start: rgba(52, 199, 160, 1);
-$color-background-end: rgba(0, 138, 162, 1);
-$color-white: rgba(255, 255, 255, 1);
-
-/* Font Weights */
-$font-regular: 400;
-$font-medium: 500;
-$font-bold: 600;
+@import "fonts";
+@import "colors";
+@import "animations";
+@import "headers";
+@import "loader";
+@import "icons";
+@import "days_container";
+@import "action_panel";
+@import "day_activity";
 
 * {
     margin: 0;
@@ -19,7 +19,7 @@ html, body {
 }
 
 body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: $font-stack;
     background: $color-background-start;
     background: -moz-linear-gradient(152deg,  $color-background-start, $color-background-end);
     background: -webkit-linear-gradient(152deg,  $color-background-start, $color-background-end);
@@ -29,10 +29,7 @@ body {
 }
 
 .hidden {
-    animation-name: hideView;
-    animation-duration: 0.3s;
-    animation-timing-function: ease-out;
-    animation-fill-mode: forwards;
+    @extend %animation-hide-view-shared;
     display: none;
 }
 
@@ -46,341 +43,5 @@ body {
 }
 
 .week-review, .day-review, .one-day-container {
-    animation-name: showView;
-    animation-duration: 0.3s;
-    animation-timing-function: ease-out;
+    @extend %animation-show-view-shared;
 }
-
-@keyframes showView {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-@keyframes hideView {
-    from { opacity: 1; }
-    to   { opacity: 0; display: none;}
-}
-
-#week-review-header {
-    max-width: 340px;
-    background-color: $color-white;
-    border-radius: 28px;
-    padding: 24px 27px;
-    padding-right: 0px;
-    width: 313px;
-}
-
-#day-review-header {
-    max-width: 340px;
-    background-color: rgba(255, 255, 255, 0.25);
-    border-radius: 28px;
-    padding: 24px 27px;
-    padding-right: 0px;
-    width: 313px;
-}
-
-#week-review-header .header-message {
-    color: #00B6A3;
-    font-size: 34px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    word-wrap: break-word;
-}
-
-#week-review-header .header-description {
-    color: #898694;
-    font-size: 16px;
-    font-weight: 600;
-    word-wrap: break-word;
-}
-
-#day-review-header .header-message {
-    color: $color-white;
-    font-size: 34px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    word-wrap: break-word;
-}
-
-#day-review-header .header-description {
-    color: rgba(255, 255, 255, 0.7);
-    font-size: 16px;
-    font-weight: 600;
-    word-wrap: break-word;
-}
-
-#day-review-header > div {
-    display: inline-block;
-}
-
-.header-back {
-    height: 40px;
-    width: 40px;
-    position: relative;
-    top: -10px;
-    left: -15px;
-    border-radius: 50%;
-}
-
-.header-back:hover {
-    cursor: pointer;
-    background-color: $color-white;
-}
-
-.header-back:hover i {
-    color: rgba(0, 182, 163, 1)
-}
-
-.header-back i {
-    font-size: 40px;
-    color: rgb(255, 255, 255);
-}
-
-#days-container {
-    margin-top: 30px;
-    margin-bottom: 15px;
-}
-
-.one-day-container {
-    background-color: rgba(255,255,255,0.25);
-    max-width: 60px;
-    border-radius: 23px;
-    display: inline-block;
-    margin-right: 5px;
-    margin-left: 5px;
-    margin-bottom:15px;
-    width: 60px;
-    height: 60px;
-}
-
-.one-day-container:hover {
-    cursor: pointer;
-}
-/*
-.one-day-container:hover .one-day-content {
-    color:rgba(0, 182, 163, 1);
-}
-*/
-.one-day-container .one-day-content.active {
-    color:rgba(0, 182, 163, 1);
-    background-color: $color-white;
-    opacity: 1;
-    cursor: default;
-    -webkit-box-shadow: 0px 3px 9px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 3px 9px 0px rgba(0,0,0,0.75);
-    box-shadow: 0px 3px 9px 0px rgba(0, 0, 0, 0.1)
-}
-
-.one-day-container:last-child {
-    margin-right: 0px;
-}
-
-.one-day-container:first-child {
-    margin-left: 0px;
-}
-
-.one-day-content {
-    color: $color-white;
-    font-size: 16px;
-    opacity: 0.7;
-    padding: 11px;
-    text-align: center;
-    font-weight: 600;
-    border-radius: 23px;
-}
-
-.action-panel {
-    max-width: 340px;
-    background-color: rgba(255,255,255,0.25);
-    border-radius: 28px;
-    padding: 20px;
-    margin-bottom: 15px;
-    width: 300px;
-}
-
-.action-info > div {
-    display: inline-block;
-}
-
-.icon-container {
-    color: $color-white;
-    width: 40px;
-    height: 40px;
-    background-color: rgba(255,255,255,0.25);
-    border-radius: 23px;
-    top: 3px;
-    position: relative;
-    margin-right: 15px;
-}
-
-.icon-container > i {
-    padding: 8px;
-    position: absolute;
-}
-
-.action-title {
-    font-size: 20px;
-    color: $color-white;
-    font-weight: 600;
-}
-
-.action-description {
-    font-size: 16px;
-    color: rgba(255, 255, 255, 0.7);
-    font-weight: 600;
-}
-
-#activity-value {
-    font-size: 38px;
-    color: $color-white;
-    font-weight: bold;
-    margin-left: 55px;
-    margin-bottom: 26px;
-    margin-top: 26px;
-}
-
-#steps-container .action-info, #calories-container .action-info{
-    display: inline-block;
-}
-
-.action-value {
-    font-size: 38px;
-    color: $color-white;
-    font-weight: bold;
-    float: right;
-}
-
-#day-activity-container {
-    max-width: 340px;
-    background-color: $color-white;
-    border-radius: 28px 28px 0px 0px;
-    padding: 24px 0px 24px 0px;
-    width: 340px;
-}
-
-#day-steps-container {
-    width: 231px;
-    height: 231px;
-    border: 8px solid rgb(0, 182, 163);
-    box-sizing: border-box;
-    border-radius: 50%;
-    margin: 0 auto;
-    padding: 18px;
-    margin-top: 15px;
-    margin-bottom: 30px;
-}
-
-#day-steps-wrapper > div {
-    margin: auto;
-    text-align: center;
-}
-
-#day-steps-icon {
-    background-color: rgba(0, 182, 163, 0.25);
-}
-
-#day-steps-icon i {
-    color: $color-white;
-    position: static;
-}
-
-#day-steps-title {
-    font-size: 20px;
-    font-weight: 500;
-    color: rgba(21, 28, 31, 1);
-    margin-top: 10px !important;
-    margin-bottom: 10px !important;
-}
-
-#day-steps-value {
-    font-size: 48px;
-    font-weight: 700;
-    color: rgba(21, 28, 31, 1);
-}
-
-#day-review-progress-message {
-    font-size: 20px;
-    font-weight: 500;
-    color: rgba(21, 28, 31, 1);
-    text-align: center;
-}
-
-#day-review-motivation-message {
-    font-size: 40px;
-    font-weight: 700;
-    color: rgba(21, 28, 31, 1);
-    text-align: center;
-}
-
-#day-review-details {
-    margin-top: 85px;
-}
-
-#day-review-details .day-review-details-wrapper:last-child {
-    border-right: none;
-}
-
-.day-review-details-wrapper {
-    width: 32%;
-    display: inline-block;
-    min-width: 100px;
-    min-height: 75px;
-    border-right: 1px solid rgb(235, 235, 235);
-    position: relative;
-}
-
-.day-review-details-title {
-    font-size: 18px;
-    font-weight: 500;
-    color: rgba(179, 179, 179, 1);
-    text-align: center;
-}
-
-.day-review-details-value {
-    font-size: 40px;
-    font-weight: 700;
-    color: rgba(0, 182, 163, 1);
-    text-align: center;
-}
-
-.day-review-details-container {
-    bottom: 0px;
-    position: absolute;
-    margin: auto;
-    width: 100%;
-}
-
-#loader {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    bottom: 0px;
-    right: 0px;
-    background-color: rgba(0, 0, 0, 0.7);
-}
-
-.spinner {
-    border: 10px solid #f3f3f3;
-    border-radius: 50%;
-    border-top: 10px solid rgba(0, 138, 162, 1);
-    width: 40px;
-    height: 40px;
-    -webkit-animation: spin 1s linear infinite; /* Safari */
-    animation: spin 1s linear infinite;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -50px;
-    margin-left: -50px;
-  }
-  
-  /* Safari */
-  @-webkit-keyframes spin {
-    0% { -webkit-transform: rotate(0deg); }
-    100% { -webkit-transform: rotate(360deg); }
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
